--- a/src/wobbly/lib.rs.html
+++ b/src/wobbly/lib.rs.html
@@ -51,7 +51,7 @@
 //! [CI Status]: https://img.shields.io/github/actions/workflow/status/juntyr/wobbly/ci.yml?branch=main
 //! [workflow]: https://github.com/juntyr/wobbly/actions/workflows/ci.yml?query=branch%3Amain
 //!
-//! [MSRV]: https://img.shields.io/badge/MSRV-1.56.0--nightly-blue
+//! [MSRV]: https://img.shields.io/badge/MSRV-1.56.0-blue
 //! [repo]: https://github.com/juntyr/const-type-layout
 //!
 //! [Latest Version]: https://img.shields.io/crates/v/wobbly
